Add download feature and prepare for deployment
- Add direct download functionality for reels
- Modern glassmorphism UI with download buttons
- Fix audio generation API key validation
- Add deployment configuration (Procfile, runtime.txt)
- Secure environment variable setup
- Production-ready Flask configuration

--- a/.gitignore
+++ b/.gitignore
@@ -43,9 +43,12 @@ instance/
 .DS_Store
 Thumbs.db
 
-# Uploads
+# Uploads and generated content
 uploads/
 static/uploads/
+user_uploads/
+static/reels/*.mp4
+done.txt
 
 # Logs
 *.log
